[package]
name = "rev_bits"
version = "0.1.1"
edition = "2021"
description = "reverses bits in a specified range"
categories = ["algorithms", "data-structures"]
keywords = ["bits", "bit", "reverse"]
homepage = "https://github.com/xpe/rev_bits"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/xpe/rev_bits"

[dependencies]

[dev-dependencies]
quickcheck = "1.0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
quickcheck_macros = "1.0.0"

[[bench]]
name = "reverse"
harness = false
